...
                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                        <nil key="textColor"/>
                                        <nil key="highlightedColor"/>
                                    </label>
                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="GdM-gU-vph">
                                        <rect key="frame" x="0.0" y="37.333333333333343" width="335" height="30"/>
                                        <accessibility key="accessibilityConfiguration" identifier="BMI Calculator Height TextBox"/>
                                        <nil key="textColor"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                        <textInputTraits key="textInputTraits"/>
                                    </textField>
                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Weight:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="XXK-DZ-eE4">
                                        <rect key="frame" x="0.0" y="84.333333333333343" width="58.666666666666664" height="20.333333333333329"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                        <nil key="textColor"/>
                                        <nil key="highlightedColor"/>
                                    </label>
                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="jYN-Ke-NCx">
                                        <rect key="frame" x="0.0" y="121.66666666666666" width="335" height="30"/>
                                        <accessibility key="accessibilityConfiguration" identifier="BMI Calculator Weight TextBox"/>
                                        <nil key="textColor"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                        <textInputTraits key="textInputTraits"/>
                                    </textField>
                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="BMI:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8GC-ET-WIG">
                                        <rect key="frame" x="0.0" y="168.66666666666669" width="34.333333333333336" height="20.333333333333343"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                        <nil key="textColor"/>
                                        <nil key="highlightedColor"/>
                                    </label>
                                    <textField opaque="NO" contentMode="scaleToFill" enabled="NO" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="RCX-ju-zMx">
                                        <rect key="frame" x="0.0" y="206" width="335" height="30"/>
                                        <accessibility key="accessibilityConfiguration" identifier="BMI Calculator Result TextBox"/>
                                        <nil key="textColor"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                        <textInputTraits key="textInputTraits"/>
                                    </textField>
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="lIp-Tr-cIs">
                                        <rect key="frame" x="0.0" y="253" width="335" height="30"/>
                                        <accessibility key="accessibilityConfiguration" identifier="BMI Calculator Calculate Button"/>
                                        <state key="normal" title="Calculate"/>
                                        <connections>
                                            <action selector="calculateButton:" destination="SJh-EH-80O" eventType="touchUpInside" id="MWq-U7-bJU"/>
                                        </connections>
                                    </button>
                                </subviews>
...
                                            <constraint firstAttribute="width" constant="600" id="pbQ-JD-6bV"/>
                                        </constraints>
                                    </view>
                                    <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="sm2-qu-AAU">
                                        <rect key="frame" x="142" y="33" width="108" height="30"/>
                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                        <accessibility key="accessibilityConfiguration" identifier="BMI Calculator Button"/>
                                        <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
                                        <state key="normal" title="BMI Calculator">
                                            <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                        </state>
                                        <connections>
                                            <segue destination="SJh-EH-80O" kind="push" id="g4Y-ee-x4p"/>
...
